WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48253
Control + Mousewheel shouldn't be handled in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=48253
Summary
Control + Mousewheel shouldn't be handled in WebKit2
Brian Weinstein
Reported
2010-10-25 11:23:33 PDT
WebKit2's WebView shouldn't handle Control + Mousewheel.
Attachments
[PATCH] Fix
(1.93 KB, patch)
2010-10-25 11:26 PDT
,
Brian Weinstein
aroben
: review+
bweinstein
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-10-25 11:26:02 PDT
Created
attachment 71773
[details]
[PATCH] Fix
Adam Roben (:aroben)
Comment 2
2010-10-25 12:27:41 PDT
Comment on
attachment 71773
[details]
[PATCH] Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=71773&action=review
> WebKit2/UIProcess/win/WebView.cpp:319 > + // We do not want WebKit to handle Control + Wheel, this should be handled by the App.
I'd say "handled by the client application to zoom the page" instead of "handled by the App".
Brian Weinstein
Comment 3
2010-10-25 12:48:23 PDT
(In reply to
comment #2
)
> (From update of
attachment 71773
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=71773&action=review
> > > WebKit2/UIProcess/win/WebView.cpp:319 > > + // We do not want WebKit to handle Control + Wheel, this should be handled by the App. > > I'd say "handled by the client application to zoom the page" instead of "handled by the App".
Fixed. Thanks!
Brian Weinstein
Comment 4
2010-10-25 13:12:13 PDT
Landed in
r70479
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug