Control + Mousewheel shouldn't be handled in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=48253

Reviewed by Adam Roben.

Don't handle a wheel event if Control is pressed, pass the message back to DefWindowProc.

* UIProcess/win/WebView.cpp:
(WebKit::WebView::onWheelEvent):



Canonical link: https://commits.webkit.org/61013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70479 268f45cc-cd09-0410-ab3c-d52691b4dbfc